@@ -1,3 +1,8 @@
+2015-01-03  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gas/avr/large-debug-line-table.d: New file.
+	* gas/avr/large-debug-line-table.s: New file.
+
 2015-01-01  Alan Modra  <amodra@gmail.com>
 
 	Update year range in copyright notice of all files.
